--- a/src/main/resources/templates/login/cadastrese.html
+++ b/src/main/resources/templates/login/cadastrese.html
@@ -7,7 +7,7 @@
 <th:block layout:fragment="conteudo">
 	<form th:action="@{/login}" method="POST">
 		<div class="aw-simple-panel">
-			<h3>Sistema Estoque</h3> <!-- <h1> -->
+			<h3>Sistema Estoque TESTETESTE</h3> <!-- <h1> -->
 			
 			<div class="aw-simple-panel__message">
 				Por favor, faça o login.
@@ -43,7 +43,7 @@
 				</div>
 				<div class="form-group" style="display: flex">
 					<button type="submit" class="btn  btn-primary  btn-lg  aw-btn-full-width">Entrar</button>
-					<a th:href="@{/cadastrese}" class="btn  btn-success  btn-lg  aw-btn-full-width" style="margin-left: 5px">Cadastre-se</a>
+					<button type="submit" class="btn  btn-success  btn-lg  aw-btn-full-width" style="margin-left: 5px">Cadastre-se</button>
 				</div>
 			</div>
 			
