--- a/src/main/resources/templates/layout/LayoutPadrao.html
+++ b/src/main/resources/templates/layout/LayoutPadrao.html
@@ -40,7 +40,7 @@
     	  	</li>
 	    
 	      <li>
-	        <a th:href="@{/logout?success}"><em class="fa  fa-sign-out"></em></a>
+	        <a th:href="@{/logout?success}" title="Sair do Sistema"><em class="fa  fa-sign-out"></em></a>
 	      </li> 
 	    </ul>
 
