--- a/src/main/resources/templates/login/cadastrese.html
+++ b/src/main/resources/templates/login/cadastrese.html
@@ -5,36 +5,23 @@
 	layout:decorator="layout/LayoutSimples">
 
 <th:block layout:fragment="conteudo">
-	<form th:action="@{/login}" method="POST">
+
+	<form th:action="@{/cadastrese}" th:object="${usuario}" method="POST">
+
 		<div class="aw-simple-panel">
-			<h3>Sistema Estoque TESTETESTE</h3> <!-- <h1> -->
+			<h3>Estoque Simples</h3>
 			
 			<div class="aw-simple-panel__message">
-				Por favor, faça o login.
+				Por favor, preencha com suas informações.
 			</div>
-			
-			<div class="aw-simple-panel__message  is-error" th:if="${!#strings.isEmpty(msgError)}">
-				<div class="alert alert-danger">
-  					<strong><span th:text="${mensagem}"></span></strong>
-				</div>
-			</div>
-			
-			<div class="aw-simple-panel__message  is-error" th:if="${#bools.isTrue(param.error)}">
-				<div class="alert alert-danger">
-  					<strong>Erro!</strong> O usuário e/ou senha não conferem.
-				</div>
-			</div>
-			
-			<div class="aw-simple-panel__message  is-error" th:if="${#bools.isTrue(param.success)}">
-				<div class="alert alert-success">
-  					<strong>Sucesso!</strong> Usuário deslogado.
-				</div>
-			</div>
-			
-			
+
 			<div class="aw-simple-panel__box">
 				<div class="form-group  has-feedback">
-					<input type="text" class="form-control  input-lg" placeholder="Usuário" autofocus="autofocus" name="username"/>
+					<input type="text" class="form-control  input-lg" placeholder="Nome" autofocus="autofocus" name="nome"/>
+					<span class="glyphicon  glyphicon-envelope  form-control-feedback"></span>
+				</div>
+				<div class="form-group  has-feedback">
+					<input type="text" class="form-control  input-lg" placeholder="Email" autofocus="autofocus" name="email"/>
 					<span class="glyphicon  glyphicon-envelope  form-control-feedback"></span>
 				</div>
 				<div class="form-group  has-feedback">
@@ -42,13 +29,13 @@
 					<span class="glyphicon  glyphicon-lock  form-control-feedback" ></span>
 				</div>
 				<div class="form-group" style="display: flex">
-					<button type="submit" class="btn  btn-primary  btn-lg  aw-btn-full-width">Entrar</button>
-					<button type="submit" class="btn  btn-success  btn-lg  aw-btn-full-width" style="margin-left: 5px">Cadastre-se</button>
+					<button type="submit" class="btn  btn-primary  btn-lg  aw-btn-full-width">Cadastrar</button>
 				</div>
 			</div>
-			
 		</div>
+
 	</form>
+
 </th:block>
 
 </html>
