--- a/src/main/resources/templates/produto/baixa.html
+++ b/src/main/resources/templates/produto/baixa.html
@@ -121,7 +121,7 @@
 						<div class="form-inline">
 							<input name="valorTotal" type="text" class="form-control  aw-form-control-inline-sm" 
 							       readonly="readonly" th:field="*{valorTotal}" />
-							<a th:href="@{/estoque/registrarBaixa}" class="btn  btn-primary" type="submit" style="margin-left: 10px">Registrar</a>
+							<a th:href="@{/estoque/registrarBaixa}" class="btn  btn-primary" type="submit" style="margin-left: 10px">Finalizar</a>
 						</div>
 						
 					</div>
