--- a/src/main/resources/templates/produto/listar.html
+++ b/src/main/resources/templates/produto/listar.html
@@ -20,9 +20,6 @@
 		});
 	
 		function confirmaExclusao(codigo) {
-			
-			alert(codigo);
-			
 			if (!confirm("Tem certeza que deseja excluir o produto?")) {
 			    return false;
 			}
@@ -93,15 +90,15 @@
 						<td th:text="${produto.quantidadeTotal}"></td>
 						<td class="table-pesq-produto-col-acoes">
 							<div class="btn-group">
-								<a th:href="@{/produto/visualizar/{codigo}(codigo=${produto.codigo})}" class="btn  btn-default btn-xs">
+								<a th:href="@{/produto/visualizar/{codigo}(codigo=${produto.codigo})}" class="btn  btn-default btn-xs" title="Visualizar">
 									<i class="fa  fa-fw  fa-eye"></i>
 								</a>
 							
-								<a th:href="@{/produto/atualizar/{codigo}(codigo=${produto.codigo})}" class="btn  btn-default btn-xs">
+								<a th:href="@{/produto/atualizar/{codigo}(codigo=${produto.codigo})}" class="btn  btn-default btn-xs" title="Atualizar">
 									<i class="fa  fa-pencil"></i>
 								</a>
 								
-								<a th:href="@{/produto/excluir/{codigo}(codigo=${produto.codigo})}" onclick="return confirmaExclusao()" class="btn  btn-default btn-xs">
+								<a th:href="@{/produto/excluir/{codigo}(codigo=${produto.codigo})}" onclick="return confirmaExclusao()" class="btn  btn-default btn-xs" title="Excluir">
 									<i class="fa  fa-trash"></i>
 								</a>
 							</div>
@@ -114,31 +111,6 @@
 			</table>
 		</div>
 		
-		<!-- 	
-		<div class="row">
-			<div class="col-xs-12  col-md-8  aw-text-xs-center  aw-text-md-left">
-				<nav>
-					<ul class="pagination  pagination-sm">
-						<li><a href="#"><i class="fa  fa-angle-double-left"></i></a></li>
-						<li class="active"><a href="#">1</a></li>
-						<li><a href="#">2</a></li>
-						<li><a href="#">3</a></li>
-						<li><a href="#">4</a></li>
-						<li><a href="#">5</a></li>
-						<li><a href="#"><i class="fa  fa-angle-double-right"></i></a></li>
-					</ul>
-				</nav>
-			</div>
-			<div class="col-xs-12  col-md-4  aw-text-xs-center  aw-text-md-right">
-				<span class="aw-pagination-info">
-					<script>
-						var row = document.getElementById("tabela-user").rows.length;
-						document.write("<b>" + (row - 1) + "</b>" + " Produtos cadastrados");
-					</script>
-				</span>
-			</div>
-		</div>
-		-->
 	</div>
 
 </section>
