--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -8,6 +8,12 @@
 	<form th:action="@{/login}" method="POST">
 		<div class="aw-simple-panel">
 			<h3>Estoque Simples</h3> <!-- <h1> -->
+
+			<div class="aw-simple-panel__message  is-error" th:if="${msgSucesso != null}">
+				<div class="alert alert-success">
+					<strong><span th:text="${msgSucesso}"></span></strong>
+				</div>
+			</div>
 			
 			<div class="aw-simple-panel__message">
 				Por favor, faça o login.
@@ -34,7 +40,7 @@
 			
 			<div class="aw-simple-panel__box">
 				<div class="form-group  has-feedback">
-					<input type="text" class="form-control  input-lg" placeholder="Usuário" autofocus="autofocus" name="username"/>
+					<input type="text" class="form-control  input-lg" placeholder="Email" autofocus="autofocus" name="username"/>
 					<span class="glyphicon  glyphicon-envelope  form-control-feedback"></span>
 				</div>
 				<div class="form-group  has-feedback">
